fix to overlay visibility css

--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -299,6 +299,7 @@
 
 .overlay-tn.open .overlay-content-tn {
   opacity: 1;
+  visibility: visible;
   transition: all .3s .1s;
   bottom: 88px;
   padding: 0;
@@ -307,6 +308,7 @@
 
 .overlay-tn .overlay-content-tn {
   opacity: 0;
+  visibility: hidden;
   position: absolute;
   right: 0;
   display: flex;
@@ -404,6 +406,7 @@
 
 .overlay-tn .overlay-content-tn .toggle-tn input.mobileToggle-tn {
   opacity: 0;
+  visibility: hidden;
   position: absolute;
 }
 
